<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/grey"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtSurName"
            app:layout_constraintEnd_toStartOf="@+id/txtAge"
            />
        <TextView
            android:id="@+id/txtSurName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="25sp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtId"
            />
        <TextView
            android:id="@+id/txtAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="25sp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toEndOf="@id/txtName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtSurName"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/txtId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="25sp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toEndOf="@id/txtSurName"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>