<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CustomerFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCustomer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardAdd"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAdd"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerCustomer"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <EditText
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_margin="5dp"
                android:background="@drawable/background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/edtAge"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/edtSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_margin="5dp"
                android:background="@drawable/background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/edtId"
                app:layout_constraintTop_toBottomOf="@+id/edtName"
                />
            <EditText
                android:id="@+id/edtAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_margin="5dp"
                android:background="@drawable/background"
                app:layout_constraintStart_toEndOf="@+id/edtName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/edtId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_margin="5dp"
                android:background="@drawable/background"
                app:layout_constraintStart_toEndOf="@id/edtSurname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAge"
                />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/blue"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtSurname"/>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_margin="10dp"
                android:backgroundTint="@color/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnRemove"
                app:layout_constraintStart_toEndOf="@+id/btnAdd"
                app:layout_constraintTop_toBottomOf="@+id/edtSurname" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:layout_margin="10dp"
                android:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnUpdate"
                app:layout_constraintTop_toBottomOf="@+id/edtSurname"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>